--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Code cult</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
+
 <body>
-    <h1 class="custom-heading">Code Cult</h1>
-    
-    
+    <div class="bg">
+       <h1>Satypal </h1>
+    </div>
+
 
 </body>
+
 </html>
